22일치 까지 해서 소개 페이지 완성 모바일버전 작업해야함

--- a/press_release.html
+++ b/press_release.html
@@ -6,9 +6,12 @@
     <link rel="stylesheet" href="bootstrap/bootstrap.css"/>
 </head>
 <body>
+
     <header class="p-header_menu-mein clearfix">
         <div class="mein_logoimg">
-            <img src="img/lglogo.png">
+            <a href="index.html">
+                <img src="img/lglogo.png">
+            </a>
         </div>
         <div class="p-header_menu-3">
                 <a href="#">
@@ -36,19 +39,16 @@
                             <div class="row">
                                   <ul class="nav flex-column">
                                       <li class="nav-item">
-                                          <a class="nav-link active" href="#">LG Way</a>
+                                          <a class="nav-link active" href="introduction.html">LG Way</a>
                                       </li>
                                       <li class="nav-item">
-                                          <a class="nav-link" href="#"> CI</a>
+                                          <a class="nav-link" href="ci.html">CI</a>
                                       </li>
                                       <li class="nav-item">
-                                          <a class="nav-link" href="#">역사</a>
+                                          <a class="nav-link" href="subsidiary.html">주요계열사</a>
                                       </li>
                                       <li class="nav-item">
-                                          <a class="nav-link" href="#">주요계열사</a>
-                                      </li>
-                                      <li class="nav-item">
-                                          <a class="nav-link" href="#">Lg사이언스파크</a>
+                                          <a class="nav-link" href="science.html">Lg사이언스파크</a>
                                       </li>
                                   </ul>
                             </div>
@@ -72,7 +72,7 @@
                                 <div class="row">
                                       <ul class="nav flex-column">
                                           <li class="nav-item">
-                                              <a class="nav-link active" href="#">보도자료</a>
+                                              <a class="nav-link active" href="press_release.html">보도자료</a>
                                           </li>
                                           <li class="nav-item">
                                               <a class="nav-link" href="#"> 동영상</a>
@@ -156,15 +156,7 @@
                         </div>
                 </li>
                 <li class="nav-item dropdown">
-                <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-                >
+                <a href="recruitment.html">
                 채용
                 </a>
                 </li>
@@ -175,11 +167,13 @@
         <h2>보도자료</h2>
         <p>LG의 즐거운 소식을 지금 만나보세요</p>
     </div>
+
     <div class="videos_width">
             <iframe class="videos" src="https://www.youtube.com/embed/_3QJibz2h54" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
             </iframe>
     </div>
-<div class="search">
+
+    <div class="search">
     <div class="search_list clearfix">
         <select name="전체보기" id="">
             <option value="">2019</option>
@@ -205,9 +199,9 @@
                 </button>
             </form>
         </div>
-</div>
+    </div>
   
-<div class="card-g">
+    <div class="card-g">
         <ul class="card_bg clearfix">
             <li class="card-list">
                 <a href="#">
@@ -451,27 +445,18 @@
         <div class="button">
             <a href="#" id="loadMore">Load More</a>
         </div>
-</div>
+    </div>
       
-            <p class="totop"> 
-                <a href="#top">Back to top</a> 
-            </p>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+    <p class="totop"> 
+        <a href="#top">Back to top</a> 
+    </p>
   
     <footer>
               <ul class="footer_bgcolor clearfix">
                   <li class="footer_part_1">
+                      <a href="index.html">
                       <img src="img/lglogo.png">
+                      </a>
                   </li>
                   <li class="footer_part_2">
                       <a href="#">
@@ -496,12 +481,10 @@
                   </a>
               </span>
           </span>
-          <span class="layout--table"> 
-              <span class="layout--table-cell">
-                  <p class="footer_text">
-                      Copyright ⓒ LG Corp. All Rights Reserved.
-                  </p>
-              </span>
+          <span class="footer_text">
+              <p class="">
+                  Copyright ⓒ LG Corp. All Rights Reserved.
+              </p>
           </span>
     </footer>
 
